figure updated, text revised

--- a/paper.bib
+++ b/paper.bib
@@ -5964,238 +5964,238 @@ Pages = {{8731-8734}},
   publisher =    {John Wiley and Sons, Inc., Hoboken, New Jersey}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
+@Article{Maginn.JCTC.2015,
+  author =	 {Zhang, Yong and Maginn, Edward J.},
+  title =	 {{Reliable Viscosity from Equilibrium Molecular Dynamics Simulations: A Time Decomposition Method}},
+  journal =	 {J. Chem. Theory Comput.},
+  year =	 {to be submitted},
   volume =       {},
   pages =	 {}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Santos.JPCB.117.10889.2013,
+  author =	 {Rocha, Marisa A. A. and Neves, Catarina M. S. S. and Greire, Mara and Russina, Olga and Triolo, Alessandro and Coutinho, Joao A. P. and Santos, Luis M. N. B. F.},
+  title =	 {{Alkylimidazoilium based ionic liquids: impact of cation symmetry on their nanoscale structural organization}},
+  journal =	 {J. Phys. Chem. B},
+  year =	 {2013},
+  volume =       {117},
+  pages =	 {10889-10897}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Lee.JPCB.118.2717.2014,
+  author =	 {Chen, Zhengjian and Lee, Jong-Min},
+  title =	 {{Free volume model for the unexpected effect of C2-methylation on the properties of imidazolium ionic liquids}},
+  journal =	 {J. Phys. Chem. B},
+  year =	 {2014},
+  volume =       {118},
+  pages =	 {2712-2718}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Macfarlane.ACR.40.1165.2007,
+  author =	 {MacFarlane, Douglas R. and Forsyth, Maria and Howlett, Patrick C. and Pringle, Jennifer M. and Sun, Jiazeng and Annat, Gary and Neil, Wayne and Izgorodina, Ekaterina I.},
+  title =	 {{Ionic liquids in electrochemical devices and processes: managing interfacial electrochemistry}},
+  journal =	 {Acc. Chem. Res.},
+  year =	 {2007},
+  volume =       {40},
+  pages =	 {1165-1173}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
+@Article{Wei.AC.2893.2006,
+  author =	 {Anderson, Jared L. and Armstrong, Daniel W. and Wei, Guor-Tzo},
+  title =	 {{Ionic liquids in analytical chemistry}},
+  journal =	 {Anal. Chem.},
+  year =	 {2006},
   volume =       {},
-  pages =	 {}
+  pages =	 {2893-2902}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Welton.CR.99.2071.1999,
+  author =	 {Welton, Thomas},
+  title =	 {{Room-temperature ionic liquids. Solvents for synthesis and catalysis}},
+  journal =	 {Chem. Rev.},
+  year =	 {1999},
+  volume =       {99},
+  pages =	 {2071-2083}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Hardacre.CR.107.2615.2007,
+  author =	 {Parvulescu, Vasile I. and Hardacre, Christopher},
+  title =	 {{Catalysis in ionic liquids}},
+  journal =	 {Chem. Rev.},
+  year =	 {2007},
+  volume =       {107},
+  pages =	 {2615-2665}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Drummond.CR.108.206.2008,
+  author =	 {Greaves, Tamar L. and Drummond, Calum J.},
+  title =	 {{Protic ionic liquids: properties and applications}},
+  journal =	 {Chem. Rev.},
+  year =	 {2008},
+  volume =       {108},
+  pages =	 {206-237}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
+@Article{Hussey.ESI.42.2007,
+  author =	 {Tsuda, Tetsuya and Hussey, Charles L.},
+  title =	 {{Electrochemical applications of room-temperature ionic liquids}},
+  journal =	 {Electrochem. Soc. Interface},
+  year =	 {2007},
   volume =       {},
-  pages =	 {}
+  pages =	 {42-49}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Husson.FPE.371.41.2014,
+  author =	 {Andresova, A. and Storch, J. and Traikia, M. and Wagner, Z. and Bendova, M. and Husson, P.},
+  title =	 {{Branched and cyclic alkyl groups in imidazolium-based ionic liquids: molecular organization and physico-chemical properties}},
+  journal =	 {Fluid Phase Equilib.},
+  year =	 {2014},
+  volume =       {371},
+  pages =	 {41-49}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Hu.JCA.1078.181.2005,
+  author =	 {Tian, Kan and Qi, Shengda and Cheng, Yuqian and Chen, Xingguo and Hu, Zhide},
+  title =	 {{Separation and determination of lignans from seeds of schisandra species by micellar electrokinetic capillary chromatography}},
+  journal =	 {J. Chromatogr. A},
+  year =	 {2005},
+  volume =       {1078},
+  pages =	 {181-187}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Schubert.JMC.18.5267.2008,
+  author =	 {Erdmenger, Tina and Vitz, Jurgen and Wiesbrock, Frank and Schubert, Ulrich S.},
+  title =	 {{Influence of different branched alkyl side chains on the properties of imidazolium-based ionic liquids}},
+  journal =	 {J. Mater. Chem.},
+  year =	 {2008},
+  volume =       {18},
+  pages =	 {5267-5273}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Siodlak.JML.177.85.2013,
+  author =	 {Ochedzan-Siodlak, Wioletta and Dziubek, Katarzyna and Siodlak, Dawid},
+  title =	 {{Densities and viscosities of imidazolium and pyridinium chloroaluminate ionic liquids}},
+  journal =	 {J. Mol. Liq.},
+  year =	 {2013},
+  volume =       {177},
+  pages =	 {85-93}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Singer.JPCA.107.2277.2003,
+  author =	 {Turner, Elizabeth A. and Pye, Cory C. and Singer, Robert D.},
+  title =	 {{Use of ab initio calculations toward the rational design of room temperature ionic liquids}},
+  journal =	 {J. Phys. Chem. A},
+  year =	 {2003},
+  volume =       {107},
+  pages =	 {2277-2288}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Watanabe.JPCB.105.4603.2001,
+  author =	 {Noda, Akihiro and Hayamizu, Kikuko and Watanabe, Masayoshi},
+  title =	 {{Pulsed-gradient spin-echo 1H and 19F NMR ionic diffusion coefficient, viscosity, and ionic conductivity of non-chloroaluminate room-temperature ionic liquids}},
+  journal =	 {J. Phys. Chem. B},
+  year =	 {2001},
+  volume =       {105},
+  pages =	 {4603-3610}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Quitevis.JPCB.115.6572.2011,
+  author =	 {Zheng, Wei and Mohammed, Ali and Hines Jr., Larry G. and Xiao, Dong and Martinez, Omar J. and Bartsch, Richard A. and Simon, Sindee L. and Russina, Olga and Triolo, Alessandro and Quitevis, Edward L.},
+  title =	 {{Effect of cation symmetry on the morphology and physicochemical properties of imidazolium ionic liquids}},
+  journal =	 {J. Phys. Chem. B},
+  year =	 {2011},
+  volume =       {115},
+  pages =	 {6572-6584}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Maroncelli.JPCB.112.81.2008,
+  author =	 {Jin, Hui and O'Hare, Bernie and Dong, Jing and Arzhantsev, Sergei and Baker, Gary A. and Wishart, James F. and Benesi, Alan J. and Maroncelli, Mark},
+  title =	 {{Physical properties of ionic liquids consisting of the 1-butyl-3-methylimidazolium cation with various anions and the bis(trifluoromethylsulfonyl)imide anion with various cations}},
+  journal =	 {J. Phys. Chem. B},
+  year =	 {2008},
+  volume =       {112},
+  pages =	 {81-92}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Seddon.JPCM.21.424121.2009,
+  author =	 {Russina, Olga and Triolo, Alessandro and Gontrani, Lorenzo and Caminiti, Ruggero and Xiao, Dong and Hines Jr., Larry G. and Bartsch, Richard A. and Quitevis, Edward L. and Plechkova, Natalia and Seddon, Kenneth R.},
+  title =	 {{Morphology and intermolecular dynamics of 1-alkyl-3-methylimidazolium bis((trifluoromethane)sulfonyl)amide ionic liquids: structural and dynamic evidence of nanoscale segregation}},
+  journal =	 {J. Phys.: Condens. Matter},
+  year =	 {2009},
+  volume =       {21},
+  pages =	 {424121}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Seddon.PAC.72.1391.2000,
+  author =	 {Earle, Martyn J. and Seddon, Kenneth R.},
+  title =	 {{Ionic liquids. Green solvents for the future}},
+  journal =	 {Pure Appl. Chem.},
+  year =	 {2000},
+  volume =       {72},
+  pages =	 {1391-1398}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Ranu.Tetrahedron.63.776.2007,
+  author =	 {Ranu, Brindaban C. and Banerjee, Subhash and Jana, Ranjan},
+  title =	 {{Ionic liquid as catalyst and solvent: the remarkable effect of a basic ionic liquid, [bmim]OH on Michael addition and alkylation of active methylene compounds}},
+  journal =	 {Tetrahedron},
+  year =	 {2007},
+  volume =       {63},
+  pages =	 {776-782}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Iranpoor.TL.47.5531.2006,
+  author =	 {Iranpoor, Nasser and Firouzabadi, Habib and Azadi, Roya},
+  title =	 {{A new diphenylphosphinite ionic liquid (IL-OPPh2) as reagent and solvent for highly selective bromination, thiocyanation or isothiocyanation of alcohols and trimethylsilyl and tetrahydropyranyl ethers}},
+  journal =	 {Tetrahedron Lett.},
+  year =	 {2006},
+  volume =       {47},
+  pages =	 {5531-5534}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Bartsch.JHC.38.265.2001,
+  author =	 {Dzyuba, Sergei V. and Bartsch, Richard A.},
+  title =	 {{Efficient synthesis of 1-alkyl(aralkyl)-3-methyl(ethyl)imidazolium halides: precursors for room-temperature ionic liquids}},
+  journal =	 {J. Heterocyclic Chem.},
+  year =	 {2001},
+  volume =       {38},
+  pages =	 {265-268}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Bartsch.CPC.3.161.2002,
+  author =	 {Dzyuba, Sergei V. and Bartsch, Richard A.},
+  title =	 {{Influence of structural variations in 1-alkyl(aralkyl)-3-methylimidazolium hexafluorophosphates and bis(trifluoromethyl-sulfonyl)imides on physical properties of the ionic liquids}},
+  journal =	 {ChemPhysChem},
+  year =	 {2002},
+  volume =       {3},
+  pages =	 {161-166}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Morriss.PRA.30.1528.1984,
+  author =	 {Evans, Denis J. and Morriss, G. P.},
+  title =	 {{Nonlinear-response theory for steady planar Couette flow}},
+  journal =	 {Phys. Rev. A},
+  year =	 {1984},
+  volume =       {30},
+  pages =	 {1528}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Muller-Plathe.PRE.59.4894.1999,
+  author =	 {Muller-Plathe, Florian},
+  title =	 {{Reversing the perturbation in nonequilibrium molecular dynamics: An easy way to calculate the shear viscosity of fluids}},
+  journal =	 {Phys. Rev. E},
+  year =	 {1999},
+  volume =       {59},
+  pages =	 {4894}
 }
 
-@Article{template,
-  author =	 {},
-  title =	 {{}},
-  journal =	 {},
-  year =	 {},
-  volume =       {},
-  pages =	 {}
+@Article{Maginn.JCP.113.2079.2000,
+  author =	 {Arya, Gaurav and Maginn, Edward J. and Chang, Hsueh-Chia},
+  title =	 {{Efficient viscosity estimation from molecular dynamics simulation via momentum impulse relaxation }},
+  journal =	 {J. Chem. Phys.},
+  year =	 {2000},
+  volume =       {113},
+  pages =	 {2079}
 }
 
 @Article{template,
