figure commented out

--- a/viscosity_method.tex
+++ b/viscosity_method.tex
@@ -723,7 +723,7 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/03-nvt/visc-3.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/03-nvt/visc-3.eps}
 \caption{}
 \label{fig:visc-longtraj}
 \end{center}
@@ -733,9 +733,9 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/density-1.eps}
 \caption{}
 \label{fig:density}
 \end{center}
@@ -747,9 +747,9 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-1.eps}
 \caption{}
 \label{fig:ethanol-ave}
 \end{center}
@@ -759,7 +759,7 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-22.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-22.eps}
 \caption{}
 \label{fig:ethanol-2ps}
 \end{center}
@@ -770,7 +770,7 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-4.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-4.eps}
 \caption{}
 \label{fig:ethanol-fit}
 \end{center}
@@ -781,9 +781,9 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-1.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-3.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-1.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-ethanol-3.eps}
 \caption{}
 \label{fig:ethanol-visc}
 \end{center}
@@ -795,13 +795,13 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-3.eps}
-\vspace{0.2in}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-4.eps}
-\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/standard_error/sigma-1.eps}
-\vspace{0.2in}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/viscosity-3.eps}
+%\vspace{0.2in}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/visc-4.eps}
+%\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/ave/standard_error/sigma-1.eps}
+%\vspace{0.2in}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-1.eps}
 \caption{}
 \label{fig:ethanol-num}
 \end{center}
@@ -812,9 +812,9 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/viscosity-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-5.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/viscosity-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/04-nvt-swarm/298/visc-conv-5.eps}
 \caption{}
 \label{fig:ethanol-length}
 \end{center}
@@ -824,7 +824,7 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/viscosity-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/15-ethanol/viscosity-1.eps}
 \caption{}
 \label{fig:ethanol-boxsize}
 \end{center}
@@ -837,11 +837,11 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-2.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-1.eps}
-\\
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-22.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-2.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-1.eps}
+%\\
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/visc-22.eps}
 \caption{}
 \label{fig:bmim-ave}
 \end{center}
@@ -852,7 +852,7 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-bmim-4.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/post_analysis_BmimTf2n_Ethanol/visc-bmim-4.eps}
 \caption{}
 \label{fig:bmim-visc}
 \end{center}
@@ -863,7 +863,7 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/350/visc-conv-1.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/350/visc-conv-1.eps}
 \caption{}
 \label{fig:bmim-num}
 \end{center}
@@ -873,7 +873,7 @@ which was found to work well even for high viscosity liquid.
 \clearpage
 \begin{figure}
 \begin{center}
-\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/350/ave/viscosity-2.eps}
+%\includegraphics[angle=0,width=3.2in]{/pscratch/yzhang19/20-viscosity/02-C4C1im/04-nvt-swarm/350/ave/viscosity-2.eps}
 \caption{}
 \label{fig:t2weight}
 \end{center}
